@@ -430,6 +430,13 @@ to be loaded.</string>
          </property>
         </widget>
        </item>
+       <item row="3" column="1">
+        <widget class="QCheckBox" name="externalFeedbackCheck">
+         <property name="text">
+          <string>Disable sending automatic feedback</string>
+         </property>
+        </widget>
+       </item>
       </layout>
      </widget>
     </widget>
