@@ -117,6 +117,9 @@ class PreferencesDialog(VeuszDialog):
         self.externalNewVerCheck.setChecked(setdb['vercheck_disabled'])
         if utils.disableVersionChecks:
             self.externalNewVerCheck.setEnabled(False)
+        self.externalNewVerCheck.setChecked(setdb['feedback_disabled'])
+        if utils.disableFeedback:
+            self.externalFeedbackCheck.setEnabled(False)
 
     def setupColorTab(self):
         """Initialise color tab
@@ -240,6 +243,8 @@ class PreferencesDialog(VeuszDialog):
         setdb['external_ghostscript'] = self.externalGhostscript.text()
         # version updates
         setdb['vercheck_disabled'] = self.externalNewVerCheck.isChecked()
+        # feedback
+        setdb['feedback_disabled'] = self.externalFeedbackCheck.isChecked()
 
         self.plotwindow.updatePlotSettings()
 
